# gdl

./: .gitignore  README.md  pyproject.toml
docs/examples/: aoi_sampler.ipynb  create_segmentation_dataset.ipynb  create_segmentation_mask.ipynb  grid_sampling.ipynb  train_semantic_segmentation.ipynb
gdl/: __init__.py
gdl/datamodules/: geo.py
gdl/datasets/: benchmark.py  geo.py  polygon.py  utils.py
gdl/samplers/: aio_sampler.py  aoi_sampler.py  batch.py  single.py
gdl/trainers/: segmentation.py
