[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "gdl"
description = "gdl: Garrulus dataset library for geospatial data samplers, transforms, and pre-trained models"
readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENSE"}
authors = [
    {name = "Mohammad Wasil", email = "mohammad.wasil@h-brs.de"},
]
maintainers = [
    {name = "Mohammad Wasil", email = "mohammad.wasil@h-brs.de"},
]
keywords = ["pytorch", "deep learning", "machine learning", "remote sensing", "satellite imagery", "earth observation", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "torchgeo[all]==0.5.2",
    "geopandas==1.0.1",
    "triangle==20230923",
    "termcolor>=1.1",
    "rasterio==1.4.2"
    "jsonpatch",
    "flatbuffers",
    "tensorboard",
    "protobuf",
    "websocket-client"
]
dynamic = ["version"]


[project.scripts]
torchgeo = "gdl.main:main"

[project.urls]
Homepage = "https://git.inf.h-brs.de/garrulus/dfm/gdl"
Documentation = "https://git.inf.h-brs.de/garrulus/dfm/gdl"

# [tool.coverage.report]
# # Ignore warnings for overloads
# # https://github.com/nedbat/coveragepy/issues/970#issuecomment-612602180
# exclude_lines = [
#     "pragma: no cover",
#     "@overload",
# ]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
exclude = "(build|data|dist|docs/src|images|logo|logs|output|mask_output)/"

[tool.pytest.ini_options]
# Skip slow tests by default
addopts = "-m 'not slow'"

markers = [
    "slow: marks tests as slow",
]
norecursedirs = [
    ".ipynb_checkpoints",
    "data",
    "__pycache__",
]
testpaths = [
    "tests",
    "docs/tutorials",
]
tmp_path_retention_policy = "failed"

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
# extend-include = ["*.ipynb"]
fix = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["ANN", "D", "I", "NPY201", "RUF", "UP"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["ANN", "D"]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.dynamic]
version = {attr = "gdl.__version__"}

[tool.setuptools.package-data]
gdl = ["py.typed"]

[tool.setuptools.packages.find]
include = ["gdl*"]
